<!--
  ~ ==================================================
  ~ =  PROJECT     地下铁的故事
  ~ =  MODULE      地下铁的故事.picture_library
  ~ =  FILE NAME   strings.xml
  ~ =  LAST MODIFIED BY PASSIONPENGUIN [1/5/21, 9:25 PM]
  ~ ==================================================
  ~ Copyright 2021 PassionPenguin. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="picture_camera_roll">CameraRoll</string>
    <string name="picture_camera_roll_num">%1$s (%2$d)</string>
    <string name="picture_cancel">Cancel</string>
    <string name="picture_take_picture">Shot</string>
    <string name="picture_rule">not pictures or video</string>
    <string name="picture_min_video_num">Video Selection Cannot%1$sNumber</string>
    <string name="picture_message_max_num">Select up to %1$s images</string>
    <string name="picture_message_audio_max_num">Select up to %1$s Audio</string>
    <string name="picture_message_video_max_num">Select up to %1$s Video</string>
    <string name="picture_preview">Preview</string>
    <string name="picture_please">Please later…</string>
    <string name="picture_done_front_num">%1$d/%2$d OK</string>
    <string name="picture_completed">Completed</string>
    <string name="picture_done">Complete</string>
    <string name="picture_please_select">Please Select</string>
    <string name="picture_empty_title">No video or photos\n</string>
    <string name="picture_empty_audio_title">No audio file\n</string>
    <string name="picture_audio_empty">You can use system recordings to record audio</string>
    <string name="picture_empty">you can use your camera to take photos or videos</string>
    <string name="picture_min_img_num">Picture Selection Cannot%1$sNumber</string>
    <string name="picture_gif_tag">gif</string>
    <string name="picture_audio">Access to system recording permission denied</string>
    <string name="picture_jurisdiction">Read memory card access denied</string>
    <string name="picture_camera">Get system camera permission denied</string>
    <string name="picture_video_toast">Video not Preview</string>
    <string name="picture_record_video">Record Video</string>
    <string name="picture_photograph">Photograph</string>
    <string name="picture_long_chart">Long</string>
    <string name="picture_warning">No Media files!</string>
    <string name="picture_prompt">Prompt</string>
    <string name="picture_prompt_content">Do you want to save pictures to your phone?</string>
    <string name="picture_save_error">Picture save failed</string>
    <string name="picture_save_success">Save picture successfully until</string>
    <string name="picture_all_audio">All audio</string>
    <string name="picture_tape">Tape</string>
    <string name="picture_play_audio">Play</string>
    <string name="picture_stop_audio">Stop</string>
    <string name="picture_quit_audio">Quit</string>
    <string name="picture_pause_audio">Pause</string>
    <string name="picture_error">The picture is corrupted</string>
    <string name="picture_video_error">The video is corrupted</string>
    <string name="picture_audio_error">The audio is corrupted</string>
    <string name="picture_confirm">Confirm</string>
    <string name="picture_preview_image_num">%1$d/%2$d</string>
    <string name="picture_not_crop_data">No cropped data</string>
    <string name="picture_original_image">Original</string>
    <string name="picture_send">Complete</string>
    <string name="picture_send_num">Complete(%1$d/%2$d)</string>
    <string name="picture_preview_num">Preview(%1$d)</string>
    <string name="picture_select">Choose</string>
    <string name="picture_data_exception">Get album data exception…</string>
    <string name="picture_recording_time_is_short">recording time is too short</string>
    <string name="picture_photo_camera">Photograph, photograph</string>
    <string name="picture_choose_max_seconds">You can only select videos within %1$ds</string>
    <string name="picture_choose_min_seconds">You cannot select a video less than %1$ds</string>
    <string name="picture_choose_limit_seconds">Only videos from %1$ds to %2$ds can be selected</string>

    <string name="picture_photo_pictures">Take Picture</string>
    <string name="picture_photo_recording">Long Press Camera</string>
    <string name="picture_go_setting">Go Setting</string>
    <string name="picture_know">I know the</string>
    <string name="picture_data_null">There no data here…</string>
</resources>
