<?xml version="1.0" encoding="utf-8"?><!--
  ~ ==================================================
  ~ =  PROJECT     地下铁的故事
  ~ =  MODULE      地下铁的故事.picture_library
  ~ =  FILE NAME   picture_wind_base_dialog.xml
  ~ =  LAST MODIFIED BY PASSIONPENGUIN [1/5/21, 9:25 PM]
  ~ ==================================================
  ~ Copyright 2021 PassionPenguin. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/picture_dialog_shadow">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/picture_prompt"
        android:textColor="@color/picture_color_ff572e"
        android:textSize="16sp" />

    <View
        android:id="@+id/top_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/tvTitle"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/picture_color_e" />


    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_line"
        android:gravity="center"
        android:paddingStart="15dp"
        android:paddingTop="30dp"
        android:paddingRight="15dp"
        android:paddingBottom="30dp"
        android:text="@string/picture_prompt_content"
        android:textColor="#53575e"
        android:textSize="15sp" />

    <View
        android:id="@+id/bottom_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/tv_content"
        android:background="@color/picture_color_e" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/bottom_line"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/picture_btn_left_bottom_selector"
            android:text="@string/picture_cancel"
            android:textColor="@color/picture_color_529BeA" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/picture_color_e" />

        <Button
            android:id="@+id/btn_commit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/picture_btn_right_bottom_selector"
            android:text="@string/picture_confirm"
            android:textColor="@color/picture_color_529BeA" />
    </LinearLayout>
</RelativeLayout>
