<?xml version="1.0" encoding="utf-8"?><!--
  ~ ==================================================
  ~ =  PROJECT     地下铁的故事
  ~ =  MODULE      地下铁的故事.picture_library
  ~ =  FILE NAME   picture_dialog_camera_selected.xml
  ~ =  LAST MODIFIED BY PASSIONPENGUIN [1/5/21, 9:25 PM]
  ~ ==================================================
  ~ Copyright 2021 PassionPenguin. All rights reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/picture_tv_photo"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/picture_item_select_bg"
        android:gravity="center"
        android:text="@string/picture_photograph"
        android:textColor="@color/picture_color_53575e"
        android:textSize="14sp" />

    <View
        android:id="@+id/top_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/picture_tv_photo"
        android:background="@color/picture_color_e" />

    <TextView
        android:id="@+id/picture_tv_video"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/top_line"
        android:background="@drawable/picture_item_select_bg"
        android:gravity="center"
        android:text="@string/picture_record_video"
        android:textColor="@color/picture_color_53575e"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/video_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/picture_tv_video"
        android:background="@color/picture_color_e" />

    <TextView
        android:id="@+id/bottom_line"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_below="@id/video_line"
        android:background="@color/picture_color_e" />

    <TextView
        android:id="@+id/picture_tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/bottom_line"
        android:background="@drawable/picture_item_select_bg"
        android:gravity="center"
        android:text="@string/picture_cancel"
        android:textColor="@color/picture_color_53575e"
        android:textSize="14sp" />
</RelativeLayout>